Jwt - json web token stuff added

--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -1,4 +1,12 @@
 {
+
+  "JwtSettings": {
+    "SecretKey": "MySecretKey1234567890",
+    "Issuer": "MyIssuer",
+    "Audience": "MyAudience",
+    "ExpiryMinutes": 60
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
