--- a/NZWalks.API/appsettings.json
+++ b/NZWalks.API/appsettings.json
@@ -1,7 +1,7 @@
 {
 
   "JwtSettings": {
-    "SecretKey": "MySecretKey1234567890",
+    "SecretKey": "MySecretKey12345678910111213141516",
     "Issuer": "MyIssuer",
     "Audience": "MyAudience",
     "ExpiryMinutes": 60
